<resources>
    <string name="app_name">GExam</string>

    <string name="progress_txt">
  <![CDATA[
  <b><font face="phetsarath">ກຳລັງໂຫຼດຂໍ້ມູນ..."</font></b>
    ]]>
 </string>

     <string name="progress_title">
  <![CDATA[
  <b><font face="phetsarath">ການເຊື່ອມຕໍ່ຜິດພາດ!!!"</font></b>
    ]]>
 </string>

     <string name="progress_message">
  <![CDATA[
  <font face="phetsarath">ກະລຸນາກວດອຸປະກອນຂອງທ່ານວ່າເຊື່ອມຕໍ່ອິນເຕີເນັດຫຼືຍັງກ່ອນເຂົ້ານຳໃຊ້</font>
    ]]>
 </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="student"><b>ນັກສຶກສາ</b></string>
    <string name="username">ລົງຊື່ເຂົ້າໃຊ້: </string>
    <string name="password">ລະຫັດຜ່ານ: </string>
    <string name="course">ເລືອກ Course: </string>
    <string name="login">ເຂົ້າລະບົບ</string>
    <string name="register"><u>ລົງທະບຽນ?</u></string>
    <string name="or">ຫຼືວ່າ </string>
    <string name="committee"><u>ກຳມະການ</u></string>
    <string name="committee_no_underscore"><b>ກຳມະການ</b></string>
    <string name="rule"><b>ກົດລະບຽບ </b></string>
    <string name="rule_notbold">ກົດລະບຽບ:</string>
    <string name="student_choice">ນັກຮຽນເລືອກ: </string>
    <string name="Next">ຕໍ່ໄປ </string>
    <string name="course_detail"><b><u>ລາຍລະອຽດ Course </u></b></string>
    <string name="course_name">ວິຊາເສັງ: </string>
    <string name="by">ໂດຍ ອ.ຈ: </string>
    <string name="classname">ຫ້ອງ: </string>
    <string name="detail">ລາຍລະອຽດ: </string>
    <string name="confirm">ຢືນຢັນ: </string>
    <string name="tick_to_confirm">ຕິກເພື່ອຢືນຢັນເລີ່ມສອບເສັງ </string>
    <string name="start">ເລີ່ມເສັງ </string>
    <string name="course_code">ລະຫັດ Course:  </string>
    <string name="qr_scan">ສະແກນ</string>
    <string name="com_rule">ກົດລະບຽບ</string>
    <string name="com_detail">ລາຍລະອຽດ</string>
    <string name="com_student_list">ລາຍຊື່ນັກສຶກສາ</string>
    <string name="com_student_no_per_list">ລາຍຊື່ນັກສຶກສາບໍ່ມີສິດສອບ</string>
    <string name="com_student_come">ມີໜ້າ</string>
    <string name="com_student_cheat">ຜິດກົດລະບຽບ</string>
    <string name="time">ເວລາໃນການສອບ: </string>
    <string name="question_amount">ຈຳນວນຂໍ້ສອບ: </string>
    <string name="amount">ຂໍ້</string>
    <string name="all_student">ທັງໝົດ: </string>
    <string name="subject">ວິຊາ: </string>
    <string name="testcode">ກະລຸນາປ້ອນເລກລະຫັດລັບຂອງ course ສອບເສັງນັ້ນ: </string>
    <string name="minute"> ນາທີ</string>
    <string name="warning">ຂໍ້ຄວນລະວັງ!!!</string>
    <string name="warning_exit">- ຫ້າມອອກຈາກ Application ເກີນ 3 ຄັ້ງ. ຖ້າເກີນການສອບຈະສິ້ນສຸດທັນທີ.</string>
    <string name="warning_check">- ກວດສອບວ່າຕອບໝົດທຸກຂໍ້ກ່ອນກົດປຸ່ມ "ສົ່ງຄຳຕອບ"</string>
    <string name="press_start_to_test">- ເມື່ອກົດປຸ່ມ "ເລີ່ມເສັງ" ຈະນຳໄປສູ່ໜ້າທີ່ນັກສຶກສາໃຊ້ໃນການຕອບຄຳຖາມ</string>
    <string name="please_wait">ກະລຸນາເປີດໜ້ານີ້ໄວ້ເພື່ອໃຫ້ຄະນະກຳມະການສະແກນເພື່ອເປີດການສອບເສັງໃຫ້</string>
    <string name="proceed">ເມື່ອຄະນະກຳມະການ ສະແກນແລ້ວ ກະລຸນາກົດປຸ່ມ "ດຳເນີນການຕໍ່"</string>
    <string name="proceed_button">ດຳເນີນການຕໍ່</string>
    <string name="wait">ກະລຸນາລໍຖ້າຄະນະກຳມະການມາສະແກນກ່ອນ!!!</string>

    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="againt_rule">
        <item>ກ່າຍກັນ</item>
        <item>ວົນແຊວ</item>
        <item>ເຄື່ອງບໍ່ຖືກລະບຽບ</item>
        <item>ຜົມຍາວ</item>
        <item>ເກີບຜິດລະບຽບ</item>
        <item>ໂສ້ງຂາເດັບ</item>
        <item>ເສື້ອບໍ່ມີກາໂຮງຮຽນ</item>

    </string-array>

    <string name="title_activity_rule">RuleActivity</string>
    <string name="active">Active:</string>
    <string name="active_course">ເປີດ Course ສອບເສັງ</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="title_activity_courese_detail_">CoureseDetail_Activity</string>
    <string name="title_activity_question_page">QuestionPageActivity</string>
    <string name="title_activity_committy_login">Committy_login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_com_frag">ComFragActivity</string>
    <string name="title_activity_com_scan">ScannerActivity</string>
    <string name="title_activity_splashscreen">Splashscreen</string>

</resources>
