<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gko.app.gexam.student.RuleActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/layout_bg_main"
        android:padding="12dp">

        <TextView android:text="@string/course_detail" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:id="@+id/textView11"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="10dp"
                android:linksClickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtCourse_detail_subject_fragment"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:id="@+id/textView5"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:id="@+id/textView6"
                    android:textSize="@dimen/text_size"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:id="@+id/txtInterval_fragment"
                    android:textSize="@dimen/text_size"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:id="@+id/textView16"
                    android:textSize="@dimen/text_size"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning"
                    android:id="@+id/textView17"
                    android:textSize="@dimen/text_size"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#d6ff0013" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fillViewport="true"

                android:id="@+id/scrollView2"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                     >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warning_exit"
                        android:id="@+id/textView15"
                        android:textSize="@dimen/text_size"
                        android:layout_weight="1"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warning_check"
                        android:id="@+id/textView18"
                        android:textSize="@dimen/text_size"
                        android:layout_weight="1" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
