<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size"
        android:layout_margin="20dp"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/proceed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtWait"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:textColor="#ffff0009" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/proceed_button"
        android:textSize="@dimen/text_size" />

</LinearLayout>